update setenv.sh