@@ -21,7 +21,9 @@ export JAVA_OPTS="$JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError"
 export JAVA_OPTS="$JAVA_OPTS -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled"
 
 # print gc log
-# export JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDateStamps -XX:+PrintGCDetails -Xloggc:./gclogs  "
+# export JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDetails"
+# export JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCTimeStamps"
+# export JAVA_OPTS="$JAVA_OPTS -Xloggc:${LOGS_DIR}/gc.log"
 
 # only for jdk 1.7
 #export JAVA_OPTS="$JAVA_OPTS -XX:MaxPermSize="256m
